# ECEN662-Spring2018

./: README.md  aycaaygun
Challenges/: README.md
Emails/: 1Assignment.txt  Greetings.txt  README.md  Tasks.txt
Students/humbertoramoszuniga/FinalProject/imu_inertial_nav/Code_EKF_imu_visual_nav/aims/: CMakeLists.txt  mag.py  package.xml
Students/humbertoramoszuniga/FinalProject/imu_inertial_nav/Code_EKF_imu_visual_nav/aims/aims/: __init__.py
Students/humbertoramoszuniga/FinalProject/imu_inertial_nav/Code_EKF_imu_visual_nav/aims/aims/attkins/: __init__.py  angular_rate.py  axis_angle.py  matrix_ops.py  quat.py
Students/humbertoramoszuniga/FinalProject/imu_inertial_nav/Code_EKF_imu_visual_nav/aims/aims/config/: orange_2.yaml  scan_room.yaml  sim_space_lab.yaml  space_lab.yaml
Students/humbertoramoszuniga/FinalProject/imu_inertial_nav/Code_EKF_imu_visual_nav/aims/launch/: collect_data.launch  viz.launch
Students/humbertoramoszuniga/FinalProject/imu_inertial_nav/Code_EKF_imu_visual_nav/imu_inertial_nav/: CMakeLists.txt  package.xml
Students/humbertoramoszuniga/FinalProject/imu_inertial_nav/Code_EKF_imu_visual_nav/imu_inertial_nav/config/: 4_marker_2_ft_square.yml  aruco.yaml
Students/humbertoramoszuniga/FinalProject/imu_inertial_nav/Code_EKF_imu_visual_nav/imu_inertial_nav/launch/: aruco.launch  collect_data.launch
Students/humbertoramoszuniga/FinalProject/imu_inertial_nav/Code_EKF_imu_visual_nav/imu_inertial_nav/scripts/: Hest.py  outpy.avi  project_database.py  propagate_imu.py  run_idb.py  run_idb_backup.py  useful_functions.py  write_idb_from_bag.py
(+383 files in other folders)
