<?xml version="1.0"?>
<package>
  <name>aims</name>
  <version>0.0.1</version>
  <description>Common LASR ROS functionality</description>


  <maintainer email="danielwhitten@gmail.com">Daniel Whitten</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
