<?xml version="1.0"?>
<package>
    <name>imu_inertial_nav</name>
    <version>0.0.1</version>
    <description>Project</description>


    <maintainer email="humbertoramos@tamu.edu">Humberto Ramos</maintainer>


    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>rospy</run_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
